--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^11.2.0",
+    "@vueuse/router": "^11.2.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
