--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-oxlint": "^0.11.0",
     "eslint-plugin-vue": "^9.30.0",
     "jsdom": "^25.0.1",
+    "lightningcss": "^1.28.1",
     "msw": "^2.6.4",
     "npm-run-all2": "^7.0.1",
     "oxlint": "^0.11.0",
@@ -48,6 +49,7 @@
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
+    "vite-svg-loader": "^5.1.0",
     "vitest": "^2.1.4",
     "vue-tsc": "^2.1.10"
   },
